# nectar-dashboard

./: .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  _typos.toml  constraints.txt  contraints.txt  django1-constraints.txt  manage.py  overrides.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upper-constraints.txt
debian/: changelog  control  copyright  nectar_theme.py  python-nectar-dashboard.dirs  python-nectar-dashboard.install  python-nectar-dashboard.postinst  python3-nectar-dashboard.install  python3-nectar-dashboard.links  python3-nectar-dashboard.postinst  python3-nectar-dashboard.postrm  rules
docs/: index.md
enabled/: _10_nectar_utils.py  _50_reset_password_panel.py  _60_network_remove_panel.py  _60_network_topology_remove_panel.py  _70_allocations.py  _71_user_info.py  _9000_disable_dns_reversedns.py  _9000_disable_share_networks.py  _9000_disable_trove_clusters.py  _9000_launch_instance.py  _9001_image_categories.py  _9001_users_add_panel_to_group.py  _9010_identity_project_members_panel.py  _9020_disable_identity_projects_panel.py  _9030_disable_identity_users_panel.py  _9040_disable_identity_groups_panel.py  _9050_disable_identity_roles_panel.py  _9360_disable_project_volume_groups.py  _9370_disable_project_vg_snapshots.py  _9900_users_add_panel_group.py
nectar_dashboard/: __init__.py  middleware.py  overrides.py  rest_auth.py  version.py
policy/: cinder_policy.json  cinder_policy.yaml  designate_policy.json  designate_policy.yaml  glance_policy.json  (+9 more)
(+463 files in other folders)
