[metadata]
name = nectar-dashboard
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Horizon panels for Nectar
description_file =
    README.rst
home_page = https://github.com/NeCTAR-RC/nectar-dashboard
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[files]
packages =
    nectar_dashboard
